@@ -1,5 +1,10 @@
 2012-01-21  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	* matlab/FiltersToolbox/typicalpsf.m (v0.1.1):
+
+	- Omit bead images that have saturated intensity values when
+	estimating the PSF.
+
 	* matlab/FileFormatToolbox/scinrrd_load.m (v0.2.0):
 
 	- Add loading of .lsm files.
